<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_credential"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="84dip"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/head" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="15dip" >

            <TextView
                android:id="@+id/uc_lbl_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameLable" >
            </TextView>

            <EditText
                android:id="@+id/uc_txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" >
            </EditText>

            <TextView
                android:id="@+id/uc_lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailLabe" >
            </TextView>

            <EditText
                android:id="@+id/uc_txt_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" >
            </EditText>

            <TextView
                android:id="@+id/uc_lbl_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel" >
            </TextView>

            <EditText
                android:id="@+id/uc_txt_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" >
            </EditText>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="bottom" >

                <Button
                    android:id="@+id/uc_cmd_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:onClick="onCancelClick"
                    android:text="@android:string/cancel" >
                </Button>

                <Button
                    android:id="@+id/uc_cmd_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="onSaveClick"
                    android:text="@string/okButton" >
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>